# dataframe-api

./: .gitignore  README.md  index.html  requirements.txt  versions.json
.github/workflows/: mypy.yml  pages.yml  preview.yml  protocol_docs.yml  publish-to-pypi.yml
doctrees/: assumptions.doctree  benchmark_suite.doctree  environment.pickle  future_API_evolution.doctree  index.doctree  purpose_and_scope.doctree  usage_data.doctree  use_cases.doctree  verification_test_suite.doctree
doctrees/API_specification/: column_selection.doctree  dataframe_basics.doctree  filter_rows.doctree  index.doctree
doctrees/design_topics/: backwards_compatibility.doctree  data_interchange.doctree  index.doctree
draft/: .buildinfo  api_design_methodology.html  assumptions.html  future_API_evolution.html  genindex.html  index.html  objects.inv  purpose_and_scope.html  search.html  searchindex.js  use_cases.html  verification_test_suite.html
draft/API_specification/: column_object.html  column_selection.html  dataframe_object.html  filter_rows.html  groupby_object.html  index.html
draft/_sources/: api_design_methodology.md.txt  purpose_and_scope.md.txt
draft/_sources/API_specification/: column_object.rst.txt  dataframe_object.rst.txt  groupby_object.rst.txt  index.rst.txt
draft/_sources/design_topics/: python_builtin_types.md.txt
draft/_static/: documentation_options.js
draft/design_topics/: backwards_compatibility.html  data_interchange.html  execution_model.html  index.html  python_builtin_types.html
protocol/: API.md  conf.py  dataframe_protocol.py  dataframe_protocol_summary.md  design_requirements.md  index.rst  pandas_implementation.py  purpose_and_scope.md
protocol/tests/: conftest.py  test_protocol.py
spec/: 01_purpose_and_scope.md  02_use_cases.md  conf.py  future_API_evolution.md  index.rst  purpose_and_scope.md  use_cases.md
spec/04_design_topics/: backwards_compatibility.md
spec/06_API_specification/: 01_dataframe_basics.md  02_column_selection.md  index.rst  statistical_methods.md
spec/API_specification/: .mypy.ini  README.md  column_object.rst  comparison_methods.md  dataframe_object.rst  expression_object.rst  filter_rows.md  groupby_object.rst  index.rst  math_methods.md  permissivecolumn_object.rst  permissiveframe_object.rst  pyproject.toml  statistical_methods.md
spec/API_specification/dataframe_api/: __init__.py  __init__.pyi  _types.py  column_object.py  column_object.pyi  dataframe_object.py  dtypes.py  expression_object.py  groupby_object.py  groupby_object.pyi  permissivecolumn_object.py  permissiveframe_object.py  scalar_object.py  typing.py
spec/API_specification/examples/: 01_standardise_columns.py  02_plotting.py  03_sklearn_like_pipeline.py  03_split_and_train.py  03_working_with_nulls.py  04_datatypes.py  04_select_and_filter_demo.py  04_select_demo.py  05_scalars_example.py  06_horizontal_functions.py  07_sklearn_like_pipeline.py  README.md
spec/API_specification/examples/tpch/: q1.py  q5.py
spec/design_topics/: execution_model.md  index.rst  python_builtin_types.md
working_documents/: data_exchange_protocol_summary.md
